--- a/index.html
+++ b/index.html
@@ -69,23 +69,20 @@
 			}
 			
 			nav ul a {
-				color: darkgreen;
+				color: blue;
 				text-decoration: none;
 			}
 		
 		</style>
 		
-		<script type="text/javascript">
+		<!--<script type="text/javascript">
 			/* =============================
 			This script generates sample text for the body content. 
 			You can remove this script and any reference to it. 
 			 ============================= */
-			var bodyText=["The smaller your reality, the more convinced you are that you know everything.", "If the facts don't fit the theory, change the facts.", "The past has no power over the present moment.", "This, too, will pass.", "</p><p>You will not be punished for your anger, you will be punished by your anger.", "Peace comes from within. Do not seek it without.", "<h3>Heading</h3><p>The most important moment of your life is now. The most important person in your life is the one you are with now, and the most important activity in your life is the one you are involved with now."]
-			function generateText(sentenceCount){
-				for (var i=0; i<sentenceCount; i++)
-				document.write(bodyText[Math.floor(Math.random()*7)]+" ")
-			}
-		</script>	
+			var bodyText=["The smaller your reality, the more convinced you are that you know everything.", "The past has no power over the present moment.", "</p><p>You will not be punished for your anger, you will be punished by your anger.", "<h3>Heading</h3><p>The most important moment of your life is now."]
+			
+		</script>-->
 	
 	</head>
 	
@@ -93,7 +90,7 @@
 
 		<header id="header">
 			<div class="innertube">
-				<h1>Header...</h1>
+				<h1>Wud Up</h1>
 			</div>
 		</header>
 		
@@ -102,38 +99,27 @@
 			<main>
 				<div id="content">
 					<div class="innertube">
-						<h1>Heading</h1>
-						<p><script>generateText(20)</script></p>
+						<h1>The Moving Forward Plan</h1>
+						<p>The smaller your reality, the more convinced you are that you know everything. The past has no power over the present moment. You will not be punished for your anger, you will be punished by your anger. The most important moment of your life is now.</p>
 					</div>
 				</div>
 			</main>
 			
 			<nav id="nav">
 				<div class="innertube">
-					<h3>Left heading</h3>
+					<h3>Projects</h3>
 					<ul>
-						<li><a href="#">Link 1</a></li>
-						<li><a href="#">Link 2</a></li>
-						<li><a href="#">Link 3</a></li>
-						<li><a href="#">Link 4</a></li>
-						<li><a href="#">Link 5</a></li>
+						<li><a href="#">Python</a></li>
+						<li><a href="#">Arduino</a></li>
+						<li><a href="#">Quadcopter</a></li>
 					</ul>
-					<h3>Left heading</h3>
+					<h3>Goals</h3>
 					<ul>
-						<li><a href="#">Link 1</a></li>
-						<li><a href="#">Link 2</a></li>
-						<li><a href="#">Link 3</a></li>
-						<li><a href="#">Link 4</a></li>
-						<li><a href="#">Link 5</a></li>
+						<li><a href="#"></a></li>
+						<li><a href="#">Workout</a></li>
+						<li><a href="#">Programming</a></li>
 					</ul>
-					<h3>Left heading</h3>
-					<ul>
-						<li><a href="#">Link 1</a></li>
-						<li><a href="#">Link 2</a></li>
-						<li><a href="#">Link 3</a></li>
-						<li><a href="#">Link 4</a></li>
-						<li><a href="#">Link 5</a></li>
-					</ul>
+
 				</div>
 			</nav>
 		
@@ -141,7 +127,7 @@
 		
 		<footer id="footer">
 			<div class="innertube">
-				<p>Footer...</p>
+				<p>psst... hi</p>
 			</div>
 		</footer>
 	
