--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					<h3>Projects</h3>
 					<ul>
 						<li><a href="#">Python</a></li>
-						<li><a href="#">Arduino</a></li>
+						<li><a href="arduino.html">Arduino</a></li>
 						<li><a href="#">Quadcopter</a></li>
 					</ul>
 					<h3>Goals</h3>
