--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
 				<div class="innertube">
 					<h3>Projects</h3>
 					<ul>
-						<li><a href="#">Python</a></li>
+						<li><a href="python.html">Python</a></li>
 						<li><a href="arduino.html">Arduino</a></li>
-						<li><a href="#">Quadcopter</a></li>
+						<li><a href="quadcopter.html">Quadcopter</a></li>
 					</ul>
 					<h3>Goals</h3>
 					<ul>
 						<li><a href="#"></a></li>
-						<li><a href="#">Workout</a></li>
-						<li><a href="#">Programming</a></li>
+						<li><a href="workout.html">Workout</a></li>
+						<li><a href="programming.html">Programming</a></li>
 					</ul>
 
 				</div>
