--- a/arduino.html
+++ b/arduino.html
@@ -59,7 +59,7 @@
 	
 		</style>
 		
-		<script type="text/javascript">
+		<!--<script type="text/javascript">
 			/* =============================
 			This script generates sample text for the body content. 
 			You can remove this script and any reference to it. 
@@ -69,7 +69,7 @@
 				for (var i=0; i<sentenceCount; i++)
 				document.write(bodyText[Math.floor(Math.random()*7)]+" ")
 			}
-		</script>	
+		</script>	-->
 	
 	</head>
 	
@@ -79,7 +79,7 @@
 			<main>
 				<div id="content">
 					<div class="innertube">
-						<h1>Heading</h1>
+						<h1>Arduino</h1>
 						<p><script>generateText(30)</script></p>
 					</div>
 				</div>
